--- a/statistics.html
+++ b/statistics.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -109,7 +109,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/test-and-evaluation-statistician-mclean-va-or-bedford-ma-6517'>Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/test-and-evaluation-statistician-mclean-va-or-bedford-ma-6517'>Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -133,7 +133,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -171,7 +171,7 @@ DVS) development in all therapeutic areas; writing specifications for analysis?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/68CD755956'>Senior Research and Statistical Analyst - Demography</a></h5> 
+<h5><a href='https://www.workable.com/j/68CD755956'>Senior Research and Statistical Analyst - Demography</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Senior Research and Statistical Analyst - Demography 
 at BAME Recruitment Limited.</p>
@@ -209,7 +209,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/obqAafw5'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/obqAafw5'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -283,7 +283,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -295,7 +295,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-30117'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-30117'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -308,7 +308,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p>Jul 10, 2019 ... Careers That Change Lives The Principal Statistician will be responsible for 
 statistical aspects of study design and analysis of data from complex...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -316,7 +316,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/FRByH82OB'>Research Digital Publishing Officer/Editor-in-Chief - Research &amp; Statistics Group - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/FRByH82OB'>Research Digital Publishing Officer/Editor-in-Chief - Research &amp; Statistics Group - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-07-18</p>
 <hr/>
@@ -340,7 +340,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/53070/principal-statistical-programmer--remote/job'>Principal Statistical Programmer- REMOTE in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/53070/principal-statistical-programmer--remote/job'>Principal Statistical Programmer- REMOTE in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Demonstrate expert knowledge and understanding of analysis data structure 
 standards (ADaM) and a good understanding of conversion data structure?...</p>
@@ -459,7 +459,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
