--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qVHaVfwr&k=Job&j=ovCAafwB&__jvst=Employee+Referral&__jvsd=shJxOhw7&__jvsc=Twitter&bid=noqBWLwB'>Caminar Careers - Mental Health/Clinical Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-29</p>
+<hr/>
 <h5><a href='https://batmaid.join.com/jobs/271193-legal-intern-august-september'>Job @ Batmaid.ch (Lausanne): Legal Intern (August ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Lausanne, Switzerland</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://single-grain.workable.com/j/9480A1A888'>Single Grain - Jobs: Business Development Intern to Hire (Paid) - Apply online</a></h5> 
+<h5><a href='https://single-grain.workable.com/j/9480A1A888'>Single Grain - Jobs: Business Development Intern to Hire (Paid) - Apply online</a></h5> 
 <p><span class="badge badge-light">Los Angeles California, United States</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -97,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indg.recruitee.com/o/360-photography-intern'>
+<h5><a href='https://indg.recruitee.com/o/360-photography-intern'>
       360 Photography Intern - INDG
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -181,6 +185,17 @@
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
+<h5><a href='https://democracyfund.applytojob.com/apply/YxPUPjWHa1/Governance-Program-Internship-Fall-2019'>Governance Program Internship, Fall 2019 - Democracy Fund ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... POSITION SUMMARY: Democracy Fund is seeking highly motivated candidates 
+from across the political spectrum to support the Governance Program for the?...</p>
+<hr/>
+<h5><a href='http://vera.applytojob.com/apply/QK6gXCmiRm'>Fall 2019: Government Affairs Intern, Law/Grad student - Vera ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>1 day ago ... Provide assistance with research and data collection on various justice and 
+safety policies, programs, and practices;; Attend Capitol Hill hearings and 
+briefings?...</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -199,7 +214,7 @@
 team! Please ONLY apply if you are local to the Northern Virginia area and able 
 to?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lamudi/14322653-682b-4d24-b438-f6b5c59d1975'>Lamudi - Admin Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lamudi/14322653-682b-4d24-b438-f6b5c59d1975'>Lamudi - Admin Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -262,7 +277,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -293,7 +308,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://noodle.applytojob.com/apply/vReNr9fVFT/Editorial-Intern-Noodlecom'>Editorial Intern | Noodle.com - The Noodle Companies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://noodle.applytojob.com/apply/vReNr9fVFT/Editorial-Intern-Noodlecom'>Editorial Intern | Noodle.com - The Noodle Companies - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We are applying data science and machine learning to EDU search, helping 
 people select which degree, program, and school is right for them. At Noodle, 
@@ -326,7 +341,7 @@ Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
 breeding. Therefore, we are building the technology to understand and optimize
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -338,7 +353,7 @@ breeding. Therefore, we are building the technology to understand and optimize
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://humancaresystems.recruiterbox.com/jobs/fk03maz/'>Program Management Intern at Humancaresystems</a></h5> 
+<h5><a href='https://humancaresystems.recruiterbox.com/jobs/fk03maz/'>Program Management Intern at Humancaresystems</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... The position will also be responsible for checking content functionality and 
 accuracy, as well as utilizing tools and processes from data sources to ensure 
@@ -356,7 +371,7 @@ quality?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RocketInternet/743999692362349-junior-group-accountant-m-w-d-'>Rocket Internet Junior Group Accountant (m/w/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RocketInternet/743999692362349-junior-group-accountant-m-w-d-'>Rocket Internet Junior Group Accountant (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -406,7 +421,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -457,18 +472,6 @@ quality?...</p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://unitednationsfoundation.applytojob.com/apply/95VjZEJYuP/Intern-Communications-Better-World-Campaign'>Intern, Communications, Better World Campaign - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://letsumai.join.com/jobs/268174-accounting-or-internship'>Job @ UMAI (Kuala Lumpur): Accounting | Internship | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/accuweather/jobs/1793409'>Job Application for Fall Intern, Digital Journalist  at AccuWeather Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
