--- a/data-science.html
+++ b/data-science.html
@@ -119,7 +119,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d793f15b-7530-4859-91a6-541fbfe13f0f'>Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/d793f15b-7530-4859-91a6-541fbfe13f0f'>Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -219,7 +219,7 @@ related; 3 to 5 years of experience in Data Sciences, ideally in a tech company?
 delivering actionable insights on crop health directly to the field meaning farmers
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -251,7 +251,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 Scientist to join our growing Basketball Operations team. In this role, you will 
 have?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/256056-data-science-praktikum-w-m-d'>Job @ Westphalia DataLab  (M?nster): Data Science ... | JOIN</a></h5> 
+<h5><a href='https://westphalia-datalab.join.com/jobs/256056-data-science-praktikum-w-m-d'>Job @ Westphalia DataLab  (M?nster): Data Science ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -300,7 +300,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://gousto.workable.com/j/199E482421'>Gousto - Jobs: Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gousto.workable.com/j/199E482421'>Gousto - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -322,7 +322,7 @@ have?...</p>
 <p>Jul 10, 2019 ... Senior Data Scientist - Operational Intelligence Platform. Los Gatos, California. 
 Streaming ? Platform Engineering. Full-time?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Self-identification of veteran status (Completion is voluntary and will not subject 
 you to adverse treatment). Tubular Labs is a Government contractor subject to?...</p>
@@ -395,7 +395,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241001-senior-data-scientist'>DataProphet Senior Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241001-senior-data-scientist'>DataProphet Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -447,7 +447,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
